--- a/style.css
+++ b/style.css
@@ -38,15 +38,22 @@ header nav {
   header nav #account {
     position: relative;
     display: none;
-    align-items: center; }
+    align-items: center;
+    border-radius: 50%;
+    overflow: hidden; }
     header nav #account img {
       width: 40px;
       height: 40px; }
     header nav #account ul {
       position: absolute;
+      display: none;
       width: max-content;
-      top: 0;
-      list-style: none; }
+      top: 100%;
+      list-style: none;
+      background: #ddd;
+      color: #131313;
+      padding: 5px;
+      box-sizing: border-box; }
 
 main {
   margin: 0 auto;
