--- a/style.css
+++ b/style.css
@@ -21,15 +21,13 @@ html {
   visibility: hidden !important; }
 
 header nav {
-  background: red;
+  background: linear-gradient(235deg, orange, deeppink);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 10vw; }
   header nav .visible {
     display: flex !important; }
-  header nav h1.nav-title {
-    color: blue; }
   header nav #line-login {
     display: none;
     padding: 0.7em 2em;
@@ -79,7 +77,7 @@ main {
     main section#wrapper article#left-wrapper div.card h1.card-title {
       text-align: center;
       font-size: 24px;
-      background: red; }
+      background: linear-gradient(235deg, orange, deeppink); }
     main section#wrapper article#left-wrapper div.card div.menu {
       display: flex;
       justify-content: space-between;
@@ -107,5 +105,13 @@ main {
 
 footer {
   background: blue; }
+
+@media (min-width: 0px) and (max-width: 550px) {
+  main section#wrapper {
+    flex-direction: column; }
+    main section#wrapper article {
+      width: 100%; }
+    main section#wrapper article#left-wrapper {
+      margin-bottom: 50px; } }
 
 /*# sourceMappingURL=style.css.map */
