--- a/style.css
+++ b/style.css
@@ -20,14 +20,17 @@ html {
 .hide {
   visibility: hidden !important; }
 
+.blank {
+  display: none !important;
+  height: 0px !important;
+  width: 0px !important; }
+
 header nav {
   background: linear-gradient(235deg, orange, deeppink);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 10vw; }
-  header nav .visible {
-    display: flex !important; }
   header nav #line-login {
     display: none;
     padding: 0.7em 2em;
@@ -56,14 +59,24 @@ main {
   margin: 0 auto;
   padding: 50px 10vw; }
   main .login-wrapper {
-    display: block;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 20vh;
+    box-sizing: border-box;
     position: absolute;
     top: 0;
     right: 0;
     left: 0;
     bottom: 0;
     background: white;
-    color: black; }
+    color: black;
+    transition: 1s ease; }
+    main .login-wrapper button {
+      margin-top: 20px;
+      width: 75%;
+      max-width: 300px;
+      padding: 1em 0; }
   main section#wrapper {
     display: flex;
     justify-content: space-between;
