--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@ header {
     #line-login {display: none; padding: 0.7em 2em; text-transform: uppercase; font-weight: 500;}
     #account {
       position: relative;
-      display: block;
+      display: flex;
       align-items: center;
       img {
         border-radius: 50%;
@@ -48,6 +48,7 @@ header {
         color: #131313;
         padding: 5px;
         box-sizing: border-box;
+        cursor: pointer;
       }
     }
   }
