--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ header nav {
   justify-content: space-between;
   align-items: center;
   padding: 10px 10vw; }
+  header nav .nav-title {
+    font-size: 1.3rem; }
   header nav #line-login {
     display: none;
     padding: 0.7em 2em;
@@ -85,8 +87,8 @@ main {
     main section#wrapper article {
       max-width: 550px;
       width: 45%; }
-      main section#wrapper article > div:not(last-of-type) {
-        margin-bottom: 30px; }
+    main section#wrapper article#left-wrapper > div:not(last-of-type) {
+      margin-bottom: 30px; }
     main section#wrapper article#left-wrapper div.card h1.card-title {
       text-align: center;
       font-size: 24px;
@@ -113,6 +115,12 @@ main {
       box-sizing: border-box;
       padding: 20px;
       height: max-content; }
+      main section#wrapper article#right-wrapper div h1 {
+        background: lightskyblue;
+        text-align: center;
+        color: #eee; }
+      main section#wrapper article#right-wrapper #order-status {
+        margin-top: 30px; }
       main section#wrapper article#right-wrapper ul {
         list-style: none; }
 
