--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 10vw;
+    .nav-title{font-size: 1.3rem;}
     #line-login {display: none; padding: 0.7em 2em; text-transform: uppercase; font-weight: 500;}
     #account {
       position: relative;
@@ -86,11 +87,9 @@ main {
     article {
       max-width: 550px;
       width: 45%;
-      > div{
-        &:not(last-of-type) {margin-bottom: 30px;}
-      }
     }
     article#left-wrapper {
+      > div{ &:not(last-of-type) {margin-bottom: 30px;} }
       div.card {
         h1.card-title {
           text-align: center;
@@ -121,6 +120,8 @@ main {
       box-sizing: border-box;
       padding: 20px;
       height: max-content;
+      div{h1{background: lightskyblue; text-align: center; color: #eee}}
+      #order-status{margin-top: 30px;}
       ul {list-style: none}
     }
   }
