--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 
 html {
   background: #131313;
-  color: #eee; }
+  color: #eee;
+  font-family: 'Roboto', sans-serif; }
 
 .btn {
   padding: 5px 10px;
@@ -32,7 +33,8 @@ header nav {
   align-items: center;
   padding: 10px 10vw; }
   header nav .nav-title {
-    font-size: 1.3rem; }
+    font-size: 1.3rem;
+    font-weight: bold; }
   header nav #line-login {
     display: none;
     padding: 0.7em 2em;
@@ -84,6 +86,9 @@ main {
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 50px 0 0; }
+    main section#wrapper div h1 {
+      margin-bottom: 10px;
+      font-family: 'Rubik', sans-serif; }
     main section#wrapper article {
       max-width: 550px;
       width: 45%; }
