--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
 html {
   background: #131313;
   color: #eee;
+  font-family: 'Roboto', sans-serif;
 }
 
 .btn {
@@ -29,7 +30,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 10vw;
-    .nav-title{font-size: 1.3rem;}
+    .nav-title{font-size: 1.3rem; font-weight: bold;}
     #line-login {display: none; padding: 0.7em 2em; text-transform: uppercase; font-weight: 500;}
     #account {
       position: relative;
@@ -84,6 +85,7 @@ main {
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 50px 0 0;
+    div{h1{margin-bottom: 10px; font-family: 'Rubik', sans-serif;}}
     article {
       max-width: 550px;
       width: 45%;
@@ -120,7 +122,7 @@ main {
       box-sizing: border-box;
       padding: 20px;
       height: max-content;
-      div{h1{background: lightskyblue; text-align: center; color: #eee}}
+      div{h1{background: lightskyblue; text-align: center; color: #eee;}}
       #order-status{margin-top: 30px;}
       ul {list-style: none}
     }
